[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/WEAPON_BOX.gd" type="Script" id=1]
[ext_resource path="res://Images/OPENED_BOX/HOVER_BOX.png" type="Texture" id=2]
[ext_resource path="res://Images/INTERACTIVE_OBJECTS/weapon_box.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="InputEventAction" id=2]
action = "INTERACT"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="WEAPON_BOX" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 3 )
expand = true

[node name="Button" type="Button" parent="."]
visible = false
margin_left = -10.0
margin_top = -32.0
margin_right = 10.0
margin_bottom = -12.0
rect_min_size = Vector2( 20, 20 )
disabled = true
shortcut = SubResource( 3 )
text = "F"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_left = -10.0
margin_top = -17.0
margin_right = 30.0
margin_bottom = -3.0
text = "150"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Button"]
margin_left = -36.0
margin_top = -32.0
margin_right = 56.0
margin_bottom = -18.0
text = "Points needed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Button"]
margin_left = 2.0
margin_top = 24.0
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
